Issue #5421: Fix misleading error message when one of socket.sendto()'s arguments has the wrong type.  Patch by Nikita Vetoshkin.